<resources>
    <string name="app_name">PasigRiverFerry_Application</string>
    <string name="ride_with_us">RIDE WITH US</string>
    <string name="know_your_destinations">KNOW YOUR DESTINATIONS</string>
    <string name="know_us_more">KNOW US MORE</string>
    <string name="todo">TODO</string>
    <string name="choose_your_location">Choose Your Location:</string>
    <string name="get_to_know_how_much_you_need_for_a_ride_with_us">GET TO KNOW HOW MUCH YOU NEED FOR A RIDE WITH US!</string>
    <string name="ride_with_us2">RIDE WITH US</string>
    <string name="choose_your_drop_off">Choose your Drop Off:</string>
    <string name="are_you_a_senior_student_pwd">Are you a Senior/Student/PWD?</string>
    <string name="submit">Submit</string>
    <string name="ett"></string>
    <string name="Dis"></string>
    <string name="tfare"></string>
    <string name="dfare"></string>
    <string name="estimated_travel_time">ESTIMATED TRAVEL TIME:</string>
    <string name="distance">DISTANCE</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="discounted_fare">DISCOUNTED FARE:</string>
    <string name="travel_somewhere_else">TRAVEL SOMEWHERE ELSE</string>
    <string name="get_to_know_your_destination_and_landmarks_near_them">GET TO KNOW YOUR DESTINATION AND LANDMARKS NEAR THEM</string>
    <string name="know_your_destination">KNOW YOUR DESTINATION</string>
    <string name="show_map">SHOW MAP</string>
    <string name="pinagbuhatan_station">PINAGBUHATAN STATION</string>
    <string name="show_in_map">SHOW IN MAP</string>
    <string name="beside_coast_guard_station_c6_bridge">Beside Coast Guard Station, C6 Bridge</string>
    <string name="eusebio_avenue_pasig_city">Eusebio Avenue, Pasig City</string>

    <string-array name="Stations">
        <item>Plaza Mexico</item>
        <item>Escolta</item>
        <item>Lawton</item>
        <item>PUP</item>

        <item>Sta. Ana</item>
        <item>Lambingan</item>
        <item>Valenzuela</item>
        <item>Hulo</item>

        <item>Guadalupe</item>
        <item>Maybunga</item>
        <item>San Joaquin</item>
        <item>Pinagbuhatan</item>
    </string-array>
    <string name="title_activity_screen6_2">Screen6_2</string>
    <string name="near_jquezon_bridge_plaza_lawton_at_post_office">Near Quezon Bridge, Plaza Lawton at Post Office</string>
    <string name="manila_city">Manila City</string>
    <string name="lawton_station">LAWTON STATION</string>
    <string name="near_jones_bridge">Near Jones Bridge</string>
    <string name="muelle_dela_industria_escolta_manila_city">Muelle dela Industria, Escolta, Manila City</string>
    <string name="lambingan_station">LAMBINGAN STATION</string>
    <string name="maybunga_station">MAYBUNGA STATION</string>
    <string name="dr_sixto_avenue_pasig_city">Dr. Sixto Avenue, Pasig City</string>
    <string name="besides_maybunga_barangay_hall">Besides Maybunga Barangay Hall</string>
    <string name="pup_station">PUP STATION</string>
    <string name="besides_philippine_coast_guard_station">Besides Philippine Coast Guard Station</string>
    <string name="mabini_campus_pup_sta_mesa_manila_city">Mabini Campus, PUP, Sta, Mesa, Manila City</string>
    <string name="valenzuela_station">VALENZUELA STATION</string>
    <string name="a_bonifacio_street_makati_city">A. Bonifacio Street, Makati City</string>
    <string name="near_bonaventure_garden_homes_riverside_studios_manila_at_lto_makati_district_office">Near Bonaventure Garden Homes, Riverside Studios Manila at LTO Makati District Office</string>
    <string name="sta_ana_station">STA ANA STATION</string>
    <string name="pedro_gil_street_sta_ana_manila_city">Pedro Gil Street, Sta. Ana, Manila City</string>
    <string name="near_sta_ana_public_market_at_savemore">Near Sta. Ana Public Market at Savemore</string>
    <string name="plaza_mexico_station">PLAZA MEXICO STATION</string>
    <string name="intramuros_manila_city">Intramuros, Manila City</string>
    <string name="near_bureau_of_immigration_manila_cathedral_at_post_office">Near Bureau of Immigration, Manila Cathedral at Post Office</string>
    <string name="san_joaquin_station">SAN JOAQUIN STATION</string>
    <string name="san_bernardo_street_pasig_city">San Bernardo Street, Pasig City</string>
    <string name="near_sumilan_at_bambang_bridge">Near Sumilan at Bambang Bridge</string>
    <string name="our_operating_service">OUR OPERATING SERVICE</string>
    <string name="frequently_asked_questions">FREQUENTLY ASKED QUESTIONS</string>
    <string name="safety_precautions">SAFETY PRECAUTIONS</string>
    <string name="we_want_you_to_get_to_know_us_better">WE WANT YOU TO GET TO KNOW US BETTER!</string>
    <string name="opServ">OPERATING SERVICES</string>
    <string name="OpServ">The Pasig River Ferry Service is open Monday to Saturday. The First Trip will start at 6:30am. Starting from Guadalupe Station to Plaza Mexico Station. The Last Trip will end at 5:30pm From Plaza Mexico Station to Guadalupe Station. From Guadalupe Station to Pinagbuhatan Station will end its trip at 5:30pm.</string>
    <string name="know_more_about_us">KNOW MORE ABOUT US</string>
    <string name="people_with_disabilities_can_ask_for_help_and_inform_the_crew_to_assist_them">People with Disabilities can ask for help and inform the crew to assist them</string>
    <string name="_6_go_down_the_ferry_boat_safely_when_you_reach_the_destination_and_get_out_of_the_station">6. Go down the ferry boat safely when you reach the destination and get out of the station</string>
    <string name="steps_in_riding_the_ferry">STEPS IN RIDING THE FERRY</string>
    <string name="_1_inspection_of_bags_to_be_conducted_by_the_guards_before_entering_the_station">1. Inspection of Bags to be conducted by the Guards before entering the station</string>
    <string name="_2_buy_a_ferry_ticket_and_sign_the_manifest">2. Buy a Ferry Ticket and sign the manifest</string>
    <string name="_3_wait_at_the_waiting_area_for_the_call_to_ride_the_ferry_boat">3. Wait at the waiting area for the call to ride the ferry boat</string>
    <string name="_4_ride_the_ferry_boat_safely">4. Ride the ferry boat safely</string>
    <string name="_5_follow_the_rules_regulations_and_precautions_whileriding_the_ferry_boat">5. Follow the rules, regulations, and precautions while riding the ferry boat</string>
    <string name="reminders_when_riding_our_ferry">REMINDERS WHEN RIDING OUR FERRY</string>
    <string name="_1_minors_are_strictly_advice_not_to_stand_specially_near_the_railings_of_the_ferry_boat_parents_should_look_after_them">1. Minors are strictly advice not to stand specially near the railings of the ferry boat. Parents should look after them.</string>
    <string name="_2_smoking_inside_the_station_and_inside_the_ferry_boat_is_strictly_prohibited_throwing_of_trash_in_the_river_inside_the_station_and_inside_the_ferry_boat_is_strictly_prohibited">2. Smoking inside the station and inside the ferry boat is strictly prohibited.Throwing of Trash in The River, Inside the station and Inside the ferry boat is strictly prohibited</string>
    <string name="_3_there_is_a_checkpoint_conducted_by_the_philippine_coast_guard_before_passing_by_the_malacanang_it_is_for_the_safety_of_the_passengers_your_cooperation_understanding_and_patience_are_needed_for_the_delay_of_the_trip_taking_of_pictures_within_the_malacanang_area_is_prohibited">3. There is a checkpoint conducted by the Philippine Coast Guard before passing by the Malacanang. It is for the safety of the passengers. Your cooperation, understanding and patience are needed for the delay of the trip Taking of Pictures within the Malacanang Area is Prohibited</string>
    <string name="_4_passengers_are_provided_with_life_vest_that_can_be_located_under_each_chair_for_safety_measure_be_sure_to_wear_it_everytime_you_are_riding_the_ferry_boat">4. Passengers are provided with Life Vest that can be located under each chair for safety measure. Be sure to wear it everytime you are riding the ferry boat</string>
    <string name="where_can_we_asked_for_help_if_we_have_questions">Where can we asked for help if we have questions?</string>
    <string name="just_visit_the_mmda_website_where_passengers_can_know_the_important_informations_about_the_pasig_river_ferry_service_passengers_can_also_visit_the_facebook_account_at_mmda_pasig_river_where_you_can_be_informed_about_the_important_happenings_and_announcements_about_the_pasig_river_ferry_service">Just visit the MMDA website where passengers can know the important informations about the Pasig River Ferry Service. Passengers can also visit the Facebook Account at MMDA Pasig River where you can be informed about the important happenings and announcements about the Pasig River Ferry Service</string>
    <string name="soon_we_will_have_a_telephone_and_cellphone_service_in_every_stations_for_more_inquiries">Soon we will have a telephone and cellphone service in every stations for more inquiries.</string>
    <string name="yes_the_pasig_river_ferry_service_follows_the_republic_act_no_9994_which_states_that_20_discount_is_given_to_students_senior_citizens_and_pwds_when_availing_the_ferry_service_just_show_any_identification_cards_id_when_availing_the_service">Yes. The Pasig River Ferry Service follows the Republic Act No. 9994 which states that 20% discount is given to students, senior citizens, and PWDs when availing the ferry service. Just show any identification cards (ID) when availing the service.</string>
    <string name="is_there_discounts_for_students_senior_citizens_and_pwds_when_riding_the_ferry">Is there discounts for Students, Senior Citizens ,and PWDs when riding the ferry?</string>
    <string name="do_you_accept_exclusive_or_special_trips_tour">Do you accept exclusive or special trips/tour?</string>
    <string name="dont_forget_to_write_the_following_when_is_the_trip_how_many_passengers_and_your_contact_details_for_easier_transaction_you_can_leave_your_request_at_any_stations_of_the_ferry_service">Dont Forget to write the following: When is the Trip, How many passengers and your contact details for easier transaction. You can leave your request at any stations of the ferry service.</string>
    <string name="yes_this_happens_every_sunday_or_current_special_holidays_you_just_need_to_write_a_letter_to_our_office_and_send_it_to_the_officials_you_may_send_the_request_at_mmda_pasig_river_ferry_service_mmda_building_edsa_corner_orense_st_guadalupe_makati_city">Yes. this happens every sunday or current special holidays. You just need to write a letter to our office and send it to the officials. you may send the request at MMDA Pasig River Ferry Service, MMDA Building EDSA corner Orense St., Guadalupe. Makati City.</string>
    <string name="hulo_station">HULO STATION</string>
    <string name="near_parish_of_our_lady_of_the_abandoned">Near Parish of Our Lady of the Abandoned</string>
    <string name="coronado_street_mandaluyong_city">Coronado Street, Mandaluyong City</string>
    <string name="todo62">TODO</string>
    <string name="guadalupe_station">GUADALUPE STATION</string>
    <string name="j_p_rizal_extension_makati_city">J.P. Rizal Extension, Makati City</string>
    <string name="near_mrt_guadalupe_station_at_commercial_mall">Near MRT Guadalupe Station at Commercial Mall</string>
    <string name="todo62">TODO</string>
</resources>

