<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EBD8"
    tools:context=".Screen10">

    <android.support.v7.widget.CardView
        android:layout_width="348dp"
        android:layout_height="566dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#70D7BF"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:layout_marginLeft="155dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mmda" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="125dp"
            android:gravity="center"
            android:text="@string/safety_precautions"
            android:textSize="22sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/info"
            android:layout_width="282dp"
            android:layout_height="37dp"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/know_more_about_us"
            android:textAllCaps="false"
            android:textColor="#383838"
            android:textColorHighlight="?android:attr/colorForeground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/anton"
            tools:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/fare"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/we_want_you_to_get_to_know_us_better"
            android:textColor="#383838"
            android:textSize="16sp"
            app:fontFamily="@font/anton"
            tools:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="165dp"
            android:text="@string/steps_in_riding_the_ferry"
            android:textColor="#383838"
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:text="@string/_1_inspection_of_bags_to_be_conducted_by_the_guards_before_entering_the_station"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="250dp"
            android:text="@string/_2_buy_a_ferry_ticket_and_sign_the_manifest"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="280dp"
            android:text="@string/_3_wait_at_the_waiting_area_for_the_call_to_ride_the_ferry_boat"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="330dp"
            android:text="@string/_4_ride_the_ferry_boat_safely"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="360dp"
            android:text="@string/_5_follow_the_rules_regulations_and_precautions_whileriding_the_ferry_boat"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="415dp"
            android:text="@string/_6_go_down_the_ferry_boat_safely_when_you_reach_the_destination_and_get_out_of_the_station"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="475dp"
            android:gravity="center"
            android:text="@string/people_with_disabilities_can_ask_for_help_and_inform_the_crew_to_assist_them"
            android:textSize="15sp"
            app:fontFamily="@font/anton" />

        <View
            android:id="@+id/divider"
            android:layout_width="333dp"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="190dp"
            android:background="@android:color/background_light"
            android:visibility="visible" />

    </android.support.v7.widget.CardView>

</RelativeLayout>