<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EBD8"
    tools:context=".Screen6_3">
    <android.support.v7.widget.CardView
        android:layout_width="348dp"
        android:layout_height="558dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#70D7BF"
        app:cardElevation="9dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:layout_marginLeft="155dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mmda" />

        <TextView
            android:id="@+id/info"
            android:layout_width="309dp"
            android:layout_height="37dp"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/know_your_destination"
            android:textAllCaps="false"
            android:textColor="#383838"
            android:textColorHighlight="?android:attr/colorForeground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/anton"
            tools:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:textColor="#383838"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="95dp"
            android:gravity="center"
            android:text="@string/get_to_know_your_destination_and_landmarks_near_them"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="340dp"
            android:layout_height="400dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="#faebd7"
            android:layout_marginStart="5dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="251dp"
                app:srcCompat="@drawable/hulo"
                android:contentDescription="@string/todo62" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="255dp"
                android:text="@string/hulo_station"
                android:textColor="#383838"
                android:textSize="22sp"
                android:textStyle="bold"
                app:fontFamily="@font/anton" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="290dp"
                android:text="@string/coronado_street_mandaluyong_city"
                android:textColor="#383838"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="315dp"
                android:text="@string/near_parish_of_our_lady_of_the_abandoned"
                android:textColor="#383838"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="136dp"
                android:layout_height="37dp"
                android:layout_marginStart="195dp"
                android:layout_marginLeft="195dp"
                android:layout_marginTop="360dp"
                android:background="#faebd7"
                android:onClick="process"
                android:text="@string/show_in_map"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>


    </android.support.v7.widget.CardView>
</RelativeLayout>
